--- a/package.json
+++ b/package.json
@@ -13,44 +13,50 @@
     },
     "dependencies": {
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@fullcalendar/core": "^6.1.5",
-        "@fullcalendar/daygrid": "^6.1.5",
-        "@fullcalendar/interaction": "^6.1.5",
-        "@fullcalendar/timegrid": "^6.1.5",
-        "@fullcalendar/vue": "^6.1.5",
+        "@fullcalendar/core": "^6.1.7",
+        "@fullcalendar/daygrid": "^6.1.8",
+        "@fullcalendar/interaction": "^6.1.7",
+        "@fullcalendar/list": "^6.1.7",
+        "@fullcalendar/multimonth": "^6.1.7",
+        "@fullcalendar/timegrid": "^6.1.7",
+        "@fullcalendar/vue": "^6.1.8",
         "@popperjs/core": "^2.11.7",
         "@sentry/tracing": "^7.47.0",
         "@sentry/vue": "^7.47.0",
         "@tailwindcss/forms": "^0.5.3",
         "@themesberg/flowbite": "^1.2.0",
-        "axios": "^1.3.5",
+        "axios": "^1.4.0",
+        "babel-runtime": "^6.26.0",
         "date-fns": "^2.29.3",
         "dropzone": "^5.9.3",
         "element-ui": "^2.15.13",
         "es6-promise": "^4.2.8",
         "flatpickr": "^4.6.13",
+        "fullcalendar-scheduler": "^6.1.8",
         "fuse.js": "^6.6.2",
         "glightbox": "^3.2.0",
         "json-schema": ">=0.4.0",
+        "jsonwebtoken": "^9.0.0",
         "laravel-mix-tailwind": "^0.1.2",
         "lodash": "^4.17.21",
+        "moment": ">=2.29.4",
         "nprogress": "^0.2.0",
         "popper.js": "^1.16.1",
+        "qs": "^6.11.1",
         "swiper": "^9.2.0",
         "tailwind": "^4.0.0",
         "tailwindcss": "^3.3.1",
         "v-money": "^0.8.1",
         "vee-validate": "^2.2.15",
         "vue": "^2.7.14",
+        "vue-axios": "^3.5.2",
         "vue-clipboard2": "^0.3.3",
         "vue-flatpickr-component": "^8.1.8",
+        "vue-full-calendar": "^2.8.1-0",
         "vue-router": "^3.6.5",
         "vue2-editor": "^2.10.3",
         "vue2-transitions": "^0.3.0",
-        "vuedraggable": "^2.24.3",
-        "moment": ">=2.29.4",
-        "qs": "^6.11.1",
-        "jsonwebtoken": "^9.0.0"
+        "vuedraggable": "^2.24.3"
     },
     "devDependencies": {
         "@babel/core": "^7.21.4",
@@ -61,6 +67,7 @@
         "@vue/eslint-config-prettier": "^7.0.1",
         "autoprefixer": "10.4.5",
         "babel-plugin-component": "^1.1.1",
+        "babel-preset-stage-2": "^6.24.1",
         "cross-env": "^7.0.3",
         "css-loader": "^6.7.3",
         "laravel-mix": "^6.0.49",
